# Hex

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  clean.js  package-lock.json  package.json  tsconfig.json
src/: index.ts  main.rs
src/classes/: utility.ts
src/commands/: hex.ts
src/listeners/: interactionCreate.ts  ready.ts
