[package]
name = "hex"
version = "0.0.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
description = "Playing with colors"
readme = "README.md"
repository = "https://github.com/ShayBox/Hex"
license = "MIT"
keywords = ["discord", "bot"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
csscolorparser = { git = "https://github.com/Shays-Forks/csscolorparser-rs.git", features = ["lab", "rust-rgb", "cint", "serde"] }
#csscolorparser = { version = "0.7", features = ["lab", "rust-rgb", "cint", "serde"] }
dotenvy = { version = "0.15", optional = true }
poise = "0.6"
random_color = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["dotenv"]
dotenv = ["dotenvy"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
multiple_crate_versions = "allow"